fixed spacing between search, subreviews, and add review button

--- a/site/src/component/Review/Review.scss
+++ b/site/src/component/Review/Review.scss
@@ -1,7 +1,6 @@
 .reviews {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 .add-review-button {
   padding: 10px 25px;
@@ -17,6 +16,7 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 .sort-dropdown {
   min-width: 10rem;
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 .subreview {
   display: flex;
